<resources>
    <string name="ranking">ランキング</string>
    <string name="wish">呑みたい</string>
    <string name="tasted">呑んだ</string>
    <string name="my_page">マイページ</string>
    <string name="detail">詳細</string>
    <string name="done">完了</string>

    <string name="price">¥%1$,d</string>

    <string name="empty_list_instruction">呑みたいお酒を追加しましょう</string>
    <string name="empty_list_recommended_to_you">あなたにおすすめ</string>
    <string name="empty_list_to_ranking">ランキングへ</string>

    <string name="dialog_wish_button_text">呑みたい</string>
    <string name="dialog_do_not_wish_button_text">そうでもない</string>

    <string name="ranking_recommended_to_you">あなたにおすすめ</string>

    <string name="sake_detail_how_to_taste">おすすめの呑み方</string>
    <string name="sake_detail_recommended_appetizers">おすすめのおつまみ</string>
    <string name="sake_detail_let_us_taste">購入してお家で呑む</string>
    <string name="sake_detail_let_us_taste_description">現地で呑めなかった・また呑みたい方はこちらから</string>
    <string name="sake_detail_add_wish_list">呑みたいに追加</string>
    <string name="sake_detail_remove_wish_list">呑みたいから削除</string>
    <string name="sake_detail_add_tasted_list">呑んだに追加</string>
    <string name="sake_detail_remove_tasted_list">呑んだから削除</string>
    <string name="sake_detail_add_wish_list_failed">呑みたいに追加できませんでした</string>
    <string name="sake_detail_remove_wish_list_failed">呑みたいから削除できませんでした</string>
    <string name="sake_detail_add_tasted_list_failed">呑んだに追加できませんでした</string>
    <string name="sake_detail_remove_tasted_list_failed">呑んだから削除できませんでした</string>

    <string name="evaluation_dialog_title">このお酒は気に入りましたか？</string>
    <string name="evaluation_dialog_open_tasted_page">呑んだページを開く</string>

    <string name="facebook_app_id">1730932427087483</string>
    <string name="fb_login_protocol_scheme">fb1730932427087483</string>
</resources>
