<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jp.kuaddo.tsuidezake.ui.BlankFragment">

        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_instruction"
            android:textColor="@color/textPrimaryColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recommended_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recommended_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/empty_list_recommended_to_you"
            android:textColor="@color/textPrimaryColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/recommended_grid"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="2"
            tools:itemCount="4"
            tools:listitem="@layout/item_sake_card" />

        <Button
            android:id="@+id/move_to_ranking_button"
            style="@style/MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/empty_list_to_ranking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recommended_grid" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
